# pythinker-code

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  PRODUCT.md  README.md  SECURITY.md  codecov.yml  flake.nix  pyproject.toml  pythinker.spec
.claude/: settings.json
.claude/hooks/: check-changelog.sh  coderabbit-merge-gate.sh
.cursor/rules/: no-co-author-trailers.mdc
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  config.yml
.github/workflows/: changelog-entry-required.yml  ci-docs.yml  ci-pythinker-cli.yml  ci-pythinker-core.yml  ci-pythinker-host.yml  ci-pythinker-sdk.yml  dispatch-pythinker-home-sync.yml  docker.yml  docs-pages.yml  homebrew-tap.yml  linux-installer.yml  macos-installer.yml  pr-title-checker.yml  promote-release.yml  release-pythinker-cli.yml  release-pythinker-core.yml  release-pythinker-host.yml  release-pythinker-sdk.yml  scoop-bucket.yml  translator.yml  typos.yml  update-flake-lock.yml  windows-installer.yml  winget-bootstrap.yml  winget.yml
.pythinker/reports/: arch-review-2026-05-30.md  deep-code-scan-findings.md  (+1 more)
dashboard/: AGENTS.md  package-lock.json  package.json
dashboard/src/: App.tsx
docs/: AGENTS.md  index.md
examples/pythinker-psql/: pyproject.toml
scripts/: build_dashboard.py  build_vis.py  check_pythinker_dependency_versions.py  check_version_tag.py  install-native.sh  install.ps1  install.sh  release.py  seed-install-counter.mjs
sdks/pythinker-sdk/: pyproject.toml
sdks/pythinker-sdk/src/pythinker_sdk/: mcp.py
tasks/: _gap_actionable.md  _gap_extract.md  agent-behavior-findings.md  agent-enhancement-remaining-plan.md  agent-harness-adoption-plan.md  decomposition-plan.md  design-adoption-blueprint.md  lessons.md  pythinker-agent-enhancement-plan.md  reference-adoption-catalog.md  todo.md  tui-enhancement-plan.md  worktree-isolation-design.md  yolo-auto-mode-analysis.md
tests/: conftest.py  test_clipboard.py  test_git_context.py  test_homebrew_formula.py  test_installation_docs.py  test_models_dev.py  test_native.py  test_release_py.py  test_release_update_pipeline.py  test_scoop_manifest.py  test_session_recap.py  test_version_lockstep.py
tests_e2e/: cassette.py  eval_schema.py  test_cassette.py  test_eval_schema.py  test_wire_approvals_tools.py  test_wire_config.py  test_wire_prompt.py  test_wire_protocol.py  test_wire_sessions.py  test_wire_skills_mcp.py  wire_helpers.py
vis/: AGENTS.md  package-lock.json  package.json
web/: AGENTS.md  package-lock.json  package.json
(+775 files in other folders)
