[project]
name = "pythinker-sdk"
version = "1.1.0"
description = "A lightweight Python SDK for the Pythinker API."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Mohamed Elkholy", email = "moelkholy1995@gmail.com" }]
keywords = ["sdk", "api-client", "pythinker", "ai", "agent", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pythinker-core==1.2.0", "mcp>=1.23,<2", "httpx>=0.28.1"]

[project.urls]
Homepage      = "https://github.com/Pythoughts-labs/pythinker-code"
Repository    = "https://github.com/Pythoughts-labs/pythinker-code"
Issues        = "https://github.com/Pythoughts-labs/pythinker-code/issues"
Changelog     = "https://github.com/Pythoughts-labs/pythinker-code/blob/main/sdks/pythinker-sdk/CHANGELOG.md"

[dependency-groups]
dev = [
    "httpx>=0.28.1,<0.29.0",
    "inline-snapshot[black]>=0.31.1",
    "pdoc>=16.0.0",
    "pyright>=1.1.407",
    "ty>=0.0.7",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0",
    "ruff>=0.14.10",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["pythinker_sdk"]
source-exclude = ["tests/**/*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["src/**/*.py", "tests/**/*.py"]
